--- a/build.gradle
+++ b/build.gradle
@@ -1,23 +1,27 @@
 buildscript {
     repositories {
+        maven { url = 'https://maven.minecraftforge.net' }
+        maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
     }
     dependencies {
-        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.53', changing: true
-        // MixinGradle:
-        classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
+        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
+        classpath 'org.parchmentmc:librarian:1.+'
+        classpath 'org.spongepowered:mixingradle:0.7.+'
     }
 }
 
+
 plugins {
-    id 'eclipse'
-    id 'maven-publish'
-    id 'net.minecraftforge.gradle' version '5.1.+'
-    apply plugin: 'org.spongepowered.mixin'
 }
 
+apply plugin: 'net.minecraftforge.gradle'
+apply plugin: 'maven-publish'
+apply plugin: 'org.spongepowered.mixin'
+apply plugin: 'org.parchmentmc.librarian.forgegradle'
+
 version = '1.0'
-group = 'dev.teamcitrusmods.fundamentalsincognita'
-archivesBaseName = 'fundamentalsincognita'
+group = 'dev.teamcitrusmods.starset'
+archivesBaseName = 'starset'
 
 java.toolchain.languageVersion = JavaLanguageVersion.of(17)
 
@@ -33,7 +37,7 @@ minecraft {
 
             property 'forge.logging.console.level', 'debug'
 
-            property 'forge.enabledGameTestNamespaces', 'fundamentalsincognita'
+            property 'forge.enabledGameTestNamespaces', 'starset'
 
             mods {
                 examplemod {
@@ -49,7 +53,7 @@ minecraft {
 
             property 'forge.logging.console.level', 'debug'
 
-            property 'forge.enabledGameTestNamespaces', 'fundamentalsincognita'
+            property 'forge.enabledGameTestNamespaces', 'starset'
 
             mods {
                 examplemod {
@@ -65,7 +69,7 @@ minecraft {
 
             property 'forge.logging.console.level', 'debug'
 
-            property 'forge.enabledGameTestNamespaces', 'fundamentalsincognita'
+            property 'forge.enabledGameTestNamespaces', 'starset'
 
             mods {
                 examplemod {
@@ -81,7 +85,7 @@ minecraft {
 
             property 'forge.logging.console.level', 'debug'
 
-            args '--mod', 'fundamentalsincognita', '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
+            args '--mod', 'starset', '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
 
             mods {
                 examplemod {
@@ -112,7 +116,7 @@ dependencies {
 jar {
     manifest {
         attributes([
-                "Specification-Title"     : "fundamentalsincognita",
+                "Specification-Title"     : "starset",
                 "Specification-Vendor"    : "examplemodsareus",
                 "Specification-Version"   : "1",
                 "Implementation-Title"    : project.name,
