--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -4,25 +4,25 @@ license="MIT License"
 #issueTrackerURL="https://change.me.to.your.issue.tracker.example.invalid/"
 
 [[mods]]
-modId="fundamentalsincognita"
+modId="starset"
 version="${file.jarVersion}"
 displayName="Fundamentals Incognita"
 #displayURL="https://change.me.to.your.mods.homepage.example.invalid/"
-logoFile="fundamentalsincognita.png"
+logoFile="starset.png"
 authors="TeamCitrusMods"
 credits="Thanks for this example mod goes to Java"
 description='''
 A Sci-Fi Magic Mod! Explore the Supernatural and peer into the Unknown... Just don't lose yourself to it...
 '''
 
-[[dependencies.fundamentalsincognita]]
+[[dependencies.starset]]
     modId="forge"
     mandatory=true
     versionRange="[43,)"
     ordering="NONE"
     side="BOTH"
 
-[[dependencies.fundamentalsincognita]]
+[[dependencies.starset]]
     modId="minecraft"
     mandatory=true
     versionRange="[1.19.2,1.20)"
