--- a/build.gradle
+++ b/build.gradle
@@ -103,17 +103,14 @@ sourceSets.main.resources { srcDir 'src/generated/resources' }
 
 repositories {
     maven { url "https://maven.blamejared.com/" }
-    maven { url "https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/" }
-    maven { url "https://repo.repsy.io/mvn/klikli-dev/mods" }
+    maven { url "https://maven.minecraftforge.net/" }
 }
 
 dependencies {
     minecraft 'net.minecraftforge:forge:1.19.2-43.2.8'
     annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
     implementation fg.deobf("team.lodestar.lodestone:lodestone:1.19.2-1.4.53")
-    implementation fg.deobf('software.bernie.geckolib:geckolib-forge-1.19:3.1.40')
-    compileOnly fg.deobf("com.klikli_dev:modonomicon:1.19.2-1.30.0")
-    runtimeOnly fg.deobf("com.klikli_dev:modonomicon:1.19.2-1.30.0")
+    implementation fg.deobf('com.github.glitchfiend:TerraBlender-forge:1.19.2-2.0.1.162')
 }
 
 jar {
